Fix for scroll button misalignment

--- a/userProfile/static/css/index.css
+++ b/userProfile/static/css/index.css
@@ -320,7 +320,7 @@ div.container.fancybox-margin{
 .showcaseContainer .mCSB_buttonRight{
 	height: 40px !important;
 	position: absolute !important;
-	top: -110px;
+	top: -120px;
 	right: 0px !important;
 }
 .showcaseBox{
